# Hedgefund_Backtesting

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  results.json  scripts_scratch_ingest_500.py
glassbox/: __init__.py  results.py  runtime.py  settings.py  strategy.py
glassbox/data/: candidates.py  fmp.py  ingest.py  provider.py  tiingo.py  universe.py
glassbox/engine/: adjustments.py  asof.py  asof_accessor.py  backtest.py  costs.py  events.py  portfolio.py
glassbox/factors/: fundamental.py  ranking.py  scoring.py
glassbox/reporting/: dashboard.py  tearsheet.py
glassbox/validation/: lookahead_audit.py  m1_report.py  metrics.py  run_m5.py  sensitivity.py  walk_forward.py
project_report/: REPORT.md
project_report/data/: m1_validation_report.json  m5_factor_results.json  results.json
project_report/tearsheets/: low_vol_tearsheet.html  momentum_tearsheet.html  reversal_tearsheet.html
tests/: test_adjustments.py  test_asof_adversarial.py  test_backtest.py  test_candidates.py  test_factors.py  test_lookahead_audit.py  test_m0_scaffold.py  test_m1_report.py  test_metrics.py  test_providers.py  test_sensitivity.py  test_strategy.py  test_tearsheet.py  test_universe.py  test_walk_forward.py
